[package]
name = "space"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.62"
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
png = "0.17.5"
pollster = "0.2.5"
wgpu = "0.13"
winit = "0.27.2"
log = "0.4.17"

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.62"
fs_extra = "1.2.0"
#glob = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11" }
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
