[package]
name = "space"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.62"
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
png = "0.17.5"
pollster = "0.2.5"
wgpu = "0.13"
winit = "0.27.2"
log = "0.4.17"
instant = "0.1.12"
#egui = "0.19.0"
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui", default-features = false }
getrandom = { version = "0.2.7", features = ["js"] }
easer = "0.3.0"
cfg-if = "1.0.0"
noise = { path = "/home/zach/projects/wgpu/noise" }
#simdnoise = "3.1.6"
#egui = { path = "/home/zach/cratesio/egui/crates/egui" }
#egui-wgpu = { path = "/home/zach/cratesio/egui/crates/egui-wgpu" }
#egui-winit = { path = "/home/zach/cratesio/egui/crates/egui-winit" }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.62"
fs_extra = "1.2.0"
#glob = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11" }
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
