[package]
name = "space"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
easer = "0.3.0"
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui", default-features = false }
env_logger = "0.10.0"
getrandom = { version = "0.2.9", features = ["js"] }
image = { version = "0.24.6", features = ["png", "jpeg"], default-features = false }
instant = "0.1.12"
log = "0.4.17"
noize = { git = "https://github.com/zthompson47/noize" }
png = "0.17.8"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.3"

#[dependencies.image]
#version = "0.24.6"
#default-features = false
#features = ["png", "jpeg"]

#[dependencies.winit]
#version = "0.27.2"
#default-features = false
#features = ["wayland"]

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11.18" }
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
